# leapnet-helpCenter-chatbot

./: .project  README.md  chatbot.css  chatbot.js  index.html  pyproject.toml  script.js  styles.css  work.js
app/: chat_requests_log2csv_batch.py  config.py  main.py  requirements.txt  settings.yml
app/common/: logger.py  utils.py
src/: main.py  requirements.txt
