[project]
name = "leapnet-helpcenter-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["fastapi (>=0.124.2,<0.125.0)", "uvicorn (>=0.38.0,<0.39.0)", "httpx (>=0.28.1,<0.29.0)", "uv (>=0.9.17,<0.10.0)", "requests (>=2.32.5,<3.0.0)", "pyyaml (>=6.0.3,<7.0.0)"]
